Varias mejoras a nginx y certificados SSL

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,21 @@ NGINX_HTTP_PORT='80'
 NGINX_HTTPS_PORT='443'
 
 # ============================================================
+# SSL CONFIGURATION
+# ============================================================
+# Tipo de certificado SSL: 'self-signed', 'letsencrypt', 'custom'
+# - self-signed: Certificados autofirmados (desarrollo/testing)
+# - letsencrypt: Certificados gratuitos de Let's Encrypt (produccion)
+# - custom: Usar certificados propios
+SSL_CERT_TYPE='self-signed'
+
+# Email para notificaciones de Let's Encrypt (solo si SSL_CERT_TYPE='letsencrypt')
+SSL_LETSENCRYPT_EMAIL=''
+
+# Forzar redireccion HTTPS en Moodle
+SSL_FORCE_HTTPS='true'
+
+# ============================================================
 # BACKUP CONFIGURATION
 # ============================================================
 # Días de retención de backups (los backups más antiguos se eliminan automáticamente)
