--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,11 @@ PROJECT_NAME='moodle_infrastructure'
 # TESTING ENVIRONMENT
 # ============================================================
 # URL de acceso al ambiente de testing
-TEST_URL='https://test.moodle.local'
+# IMPORTANTE: Usar HTTP si accedes por localhost/IP
+# - Via Apache (recomendado): http://localhost:8080 o http://IP-del-servidor:8080
+# - Directo al contenedor: http://localhost:8081
+# Usar HTTPS solo si tienes certificados SSL configurados en Apache
+TEST_URL='http://localhost:8081'
 
 # Base de datos Testing
 TEST_DB_NAME='moodle_test'
@@ -31,14 +35,19 @@ TEST_MOODLE_ADMIN_PASS='GENERAR_CONTRASEÑA_SEGURA'
 TEST_MOODLE_ADMIN_EMAIL='admin@test.moodle.local'
 
 # Puertos Testing
-TEST_HTTP_PORT='8080'
+# Apache en HOST escucha en 8080, hace proxy a contenedor en 8081
+TEST_HTTP_PORT='8081'
 TEST_HTTPS_PORT='8443'
 
 # ============================================================
 # PRODUCTION ENVIRONMENT
 # ============================================================
 # URL de acceso al ambiente de producción
-PROD_URL='https://moodle.local'
+# IMPORTANTE: Usar HTTP si accedes por localhost/IP
+# - Via Apache (recomendado): http://localhost o http://IP-del-servidor
+# - Directo al contenedor: http://localhost:8082
+# Usar HTTPS solo si tienes certificados SSL configurados en Apache
+PROD_URL='http://localhost'
 
 # Base de datos Production
 PROD_DB_NAME='moodle_prod'
@@ -52,29 +61,28 @@ PROD_MOODLE_ADMIN_PASS='GENERAR_CONTRASEÑA_SEGURA'
 PROD_MOODLE_ADMIN_EMAIL='admin@moodle.local'
 
 # Puertos Production
+# Apache en HOST escucha en 80, hace proxy a contenedor en 8082
 PROD_HTTP_PORT='80'
 PROD_HTTPS_PORT='443'
 
 # ============================================================
-# NGINX
+# APACHE CONFIGURATION
 # ============================================================
-NGINX_HTTP_PORT='80'
-NGINX_HTTPS_PORT='443'
+# Apache corre en el HOST como proxy reverso a los contenedores Moodle
+# Testing: Apache escucha en 8080 → Moodle contenedor en 8081
+# Production: Apache escucha en 80 → Moodle contenedor en 8082
+# Los VirtualHosts se configuran automáticamente durante la instalación
 
 # ============================================================
-# SSL CONFIGURATION
+# SSL CONFIGURATION (para Apache en el HOST)
 # ============================================================
-# Tipo de certificado SSL: 'self-signed', 'letsencrypt', 'custom'
-# - self-signed: Certificados autofirmados (desarrollo/testing)
-# - letsencrypt: Certificados gratuitos de Let's Encrypt (produccion)
-# - custom: Usar certificados propios
-SSL_CERT_TYPE='self-signed'
-
-# Email para notificaciones de Let's Encrypt (solo si SSL_CERT_TYPE='letsencrypt')
-SSL_LETSENCRYPT_EMAIL=''
-
-# Forzar redireccion HTTPS en Moodle
-SSL_FORCE_HTTPS='true'
+# Configuración de certificados SSL en Apache
+# Para configurar SSL, usa certbot después de la instalación:
+#   sudo certbot --apache -d tusitio.com
+#   sudo certbot --apache -d test.tusitio.com
+#
+# IMPORTANTE: Dejar SSL_FORCE_HTTPS en 'false' hasta configurar certificados válidos
+SSL_FORCE_HTTPS='false'
 
 # ============================================================
 # BACKUP CONFIGURATION
